# instant-clip-tokenizer

./: Cargo.toml  LICENSE  Makefile  README.md  deny.toml  original.py
.github/workflows/: publish.yml  rust.yml
benches/: bench.rs
examples/: tokenize.rs
instant-clip-tokenizer/: Cargo.toml
instant-clip-tokenizer-py/: Cargo.toml  pyproject.toml
instant-clip-tokenizer-py/src/: lib.rs
instant-clip-tokenizer-py/test/: test.py
instant-clip-tokenizer/benches/: encode.rs  tokenize_batch.rs
instant-clip-tokenizer/src/: lib.rs
scripts/: .gitignore  original.py  validate.py
src/: lib.rs
