[package]
name = "instant-clip-tokenizer-py"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
name = "instant_clip_tokenizer"
crate-type = ["cdylib"]

[dependencies]
instant-clip-tokenizer = { version = "0.1", features = ["ndarray"], path = "../instant-clip-tokenizer" }
numpy = "0.20"
pyo3 = { version = "0.20.0", features = ["extension-module"] }
